--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <declare-styleable name="LoadingButton">
-<!--   TODO: create custom attributes for the view-->
+        <attr name="android:textColor" format="color" />
+        <attr name="android:textSize" format="dimension" />
+        <attr name="buttonBackgroundColor" format="color" />
+        <attr name="animationLoadingColor" format="color" />
+        <attr name="animationArcColor" format="color" />
     </declare-styleable>
 </resources>
