--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#07C2AA</color>
-    <color name="colorPrimaryDark">#004349</color>
-    <color name="colorAccent">#F9A825</color>
+    <color name="colorPrimary">#7CB342</color>
+    <color name="colorPrimaryDark">#4B830D</color>
+    <color name="colorAccent">#AEE571</color>
     <color name="white">#FFFFFF</color>
+    <color name="loadingColor">#80FFFFFF</color>
 </resources>
